fixed background images overflow

--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,16 @@ html {
 }
 
 body {
+    position: relative;
     background-color: #232323;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+html,
+body {
+    overflow-x: hidden;
 }
 
 main {
@@ -204,6 +210,8 @@ nav a {
 .project-card-container div {
     flex: 0 32.5%;
     border-radius: 3px;
+    flex: 1;
+
 }
 
 @media screen and (min-width: 815px) and (max-width: 1218px) {
@@ -215,12 +223,12 @@ nav a {
 
 @media screen and (min-width: 1220px) {
     .project-card-container div {
-        min-width: 325px;
+        min-width: 350px;
     }
 }
 
 .project-card-container>* {
-    margin: 0.5em 0;
+    margin: 0.5em 0.2em;
 }
 
 @media screen and (min-width: 815px) and (max-width: 1218px) {
@@ -710,7 +718,7 @@ nav a {
     filter: opacity(0.05);
     margin: 0;
     right: 58vw;
-    height: 800px;
+    height: 50vh;
 }
 
 @media screen {}
@@ -719,7 +727,6 @@ nav a {
     position: absolute;
     margin: 0;
     z-index: -1;
-    margin-top: -65px;
     right: 21.1vw;
     width: 400px;
 }
@@ -738,7 +745,6 @@ nav a {
     z-index: -1;
     width: 375px;
     margin: 0;
-    margin-top: -40px;
     left: 48vw;
 }
 
